--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/rumack/milestone-2#readme",
   "devDependencies": {
-    "node-sass": "^4.13.0",
+    "live-server": "^1.2.1",
+    "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5"
   },
   "dependencies": {}
